added user controller methods
